--- a/index.html
+++ b/index.html
@@ -328,66 +328,101 @@
       <section class="section customers">
         <div class="container">
           <h2 class="title-customers">Customers</h2>
+          <div>
+            <ul class="list list-customers">
+              <li class="partner">
+                <a href="">
+                  <svg class="svg-partner" width="104" height="56">
+                    <use href="./images/icons.svg#icon-ya-so"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="partner">
+                <a href="">
+                  <svg class="svg-partner" width="104" height="56">
+                    <use href="./images/icons.svg#icon-tagline"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="partner">
+                <a href="">
+                  <svg class="svg-partner" width="104" height="56">
+                    <use href="./images/icons.svg#icon-thirh-company"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="partner">
+                <a href="">
+                  <svg class="svg-partner" width="104" height="56">
+                    <use href="./images/icons.svg#icon-foster-peter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="partner">
+                <a href="">
+                  <svg class="svg-partner" width="104" height="56">
+                    <use href="./images/icons.svg#icon-leaf-logo"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="partner">
+                <a href="">
+                  <svg class="svg-partner" width="104" height="56">
+                    <use href="./images/icons.svg#icon-last-company"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!--Підвал Footer-->
+    <footer class="footer">
+      <div class="container footer-data">
         <div>
-          <ul class="list list-customers">
-            <li class="partner">
+          <a href="./" class="logo logo-bottom"
+            ><span class="first-word">WEB</span>STUDIO</a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="social-media">
+          <h4>Social media</h4>
+          <ul class="list footer-list">
+            <li class="footer-ico">
               <a href="">
-                <svg class="svg-partner" width="104" height="56">
-                  <use href="./images/icons.svg#icon-ya-so"></use>
+                <svg with="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="partner">
+            <li class="footer-ico">
               <a href="">
-                <svg class="svg-partner"  width="104" height="56">
-                  <use href="./images/icons.svg#icon-tagline"></use>
+                <svg with="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="partner">
+            <li class="footer-ico">
               <a href="">
-                <svg class="svg-partner"  width="104" height="56">
-                  <use href="./images/icons.svg#icon-thirh-company"></use>
+                <svg with="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="partner">
+            <li class="footer-ico">
               <a href="">
-                <svg class="svg-partner" width="104" height="56">
-                  <use href="./images/icons.svg#icon-foster-peter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="partner">
-              <a href="">
-                <svg class="svg-partner"  width="104" height="56">
-                  <use href="./images/icons.svg#icon-leaf-logo"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="partner">
-              <a href="">
-                <svg class="svg-partner" width="104" height="56">
-                  <use href="./images/icons.svg#icon-last-company"></use>
+                <svg with="24" height="24">
+                  <use href="./images/icons.svg#icon-in"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-      </section>
-        </div>
-        
-    </main>
-    <!--Підвал Footer-->
-    <footer class="footer">
-      <div class="container">
-        <a href="./" class="logo logo-bottom"
-          ><span class="first-word">WEB</span>STUDIO</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
       </div>
     </footer>
   </body>
