--- a/portfolio.html
+++ b/portfolio.html
@@ -194,14 +194,50 @@
     </main>
     <!--Підвал Footer-->
     <footer class="footer">
-      <div class="container">
-        <a href="./" class="logo logo-bottom"
-          ><span class="first-word">WEB</span>STUDIO</a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-data">
+        <div>
+          <a href="./" class="logo logo-bottom"
+            ><span class="first-word">WEB</span>STUDIO</a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="social-media">
+          <h4>Social media</h4>
+          <ul class="list footer-list">
+            <li class="footer-ico">
+              <a href="">
+                <svg with="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-ico">
+              <a href="">
+                <svg with="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-ico">
+              <a href="">
+                <svg with="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-ico">
+              <a href="">
+                <svg with="24" height="24">
+                  <use href="./images/icons.svg#icon-in"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
