--- a/index.html
+++ b/index.html
@@ -331,42 +331,42 @@
           <div>
             <ul class="list list-customers">
               <li class="partner">
-                <a href="">
+                <a href="" class="a-partner">
                   <svg class="svg-partner" width="104" height="56">
                     <use href="./images/icons.svg#icon-ya-so"></use>
                   </svg>
                 </a>
               </li>
               <li class="partner">
-                <a href="">
+                <a href="" class="a-partner">
                   <svg class="svg-partner" width="104" height="56">
                     <use href="./images/icons.svg#icon-tagline"></use>
                   </svg>
                 </a>
               </li>
               <li class="partner">
-                <a href="">
+                <a href="" class="a-partner">
                   <svg class="svg-partner" width="104" height="56">
                     <use href="./images/icons.svg#icon-thirh-company"></use>
                   </svg>
                 </a>
               </li>
               <li class="partner">
-                <a href="">
+                <a href="" class="a-partner">
                   <svg class="svg-partner" width="104" height="56">
                     <use href="./images/icons.svg#icon-foster-peter"></use>
                   </svg>
                 </a>
               </li>
               <li class="partner">
-                <a href="">
+                <a href="" class="a-partner">
                   <svg class="svg-partner" width="104" height="56">
                     <use href="./images/icons.svg#icon-leaf-logo"></use>
                   </svg>
                 </a>
               </li>
               <li class="partner">
-                <a href="">
+                <a href="" class="a-partner">
                   <svg class="svg-partner" width="104" height="56">
                     <use href="./images/icons.svg#icon-last-company"></use>
                   </svg>
